Fix issues with image stretching

--- a/support-frontend/assets/pages/weekly-subscription-landing/components/hero/weeklyCampaign.scss
+++ b/support-frontend/assets/pages/weekly-subscription-landing/components/hero/weeklyCampaign.scss
@@ -14,6 +14,7 @@
     position: relative;
     max-height: 100%;
     height: 100%;
+    max-width: 100%;
 
     img {
       height: 100%;
@@ -44,8 +45,10 @@
   }
 
   .weekly-gifting-hero__copy {
-    @include mq($until: tablet) {
-      width: gu-span(3);
+    width: gu-span(3);
+
+    @include mq($until: desktop) {
+      width: gu-span(2);
       margin-bottom: 0;
       h2 {
         font-size: 34px;
@@ -53,7 +56,7 @@
     }
 
     @include mq($until: mobileLandscape) {
-      width: gu-span(3);
+      width: gu-span(1.5);
       margin-bottom: 0;
       h2 {
         font-size: 30px;
@@ -61,7 +64,6 @@
     }
 
     @include mq($until: mobileMedium) {
-      width: gu-span(2);
       h2 {
         font-size: 28px;
       }
